--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <!-- End Contact by Phone or Email and Up button  -->
     <!-- Start OverLay -->
-    <section id="overlay" class="overlay">
+    <!-- <section id="overlay" class="overlay">
       <div class="uk-slider-container-offset" uk-slider>
         <div
           class="uk-position-relative uk-visible-toggle uk-light slider-container"
@@ -187,7 +187,7 @@
           uk-slider-item="next"
         ></a>
       </div> -->
-    </section>
+    </section> -->
     <!-- End OverLay -->
     <!-- Start Healty -->
     <section class="healthy">
