--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <!-- End Contact by Phone or Email and Up button  -->
     <!-- Start OverLay -->
-    <!-- <section id="overlay" class="overlay">
+    <section id="overlay" class="overlay">
       <div class="uk-slider-container-offset" uk-slider>
         <div
           class="uk-position-relative uk-visible-toggle uk-light slider-container"
@@ -130,7 +130,7 @@
 
         <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
       </div>
-      <!-- <div
+       <div
         class="uk-position-relative uk-visible-toggle uk-light slider-container"
         tabindex="-1"
         uk-slider
@@ -186,8 +186,8 @@
           uk-slidenav-next
           uk-slider-item="next"
         ></a>
-      </div> -->
-    </section> -->
+      </div> 
+    </section> 
     <!-- End OverLay -->
     <!-- Start Healty -->
     <section class="healthy">
