--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
       href="https://cdn.jsdelivr.net/npm/uikit@3.10.1/dist/css/uikit.min.css"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Twitter" />
-    <meta name="twitter:creator" content="@johndoe" />
+    <meta name="twitter:site" content="@MohamedElMasn15" />
+    <meta name="twitter:creator" content="@MohamedElMasn15" />
     <meta
       name="twitter:title"
-      content="Effects of Social Media on Daily Life"
+      content="Mohamed El Masnaoui Front end developer"
     />
-    <meta
-      name="twitter:description"
-      content="A study on daily life is affected by the excessive use of social media."
-    />
+    <meta name="twitter:description" content="Click here" />
     <meta
       name="twitter:image"
-      content="https://images.unsplash.com/photo-1457433575995-8407028a9970?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+      content="/images/F00F0F05-49F4-47D8-9830-44443E59F354.jpeg"
     />
     <title>Sushi</title>
   </head>
